--- a/app/src/main/res/drawable/seekbar.xml
+++ b/app/src/main/res/drawable/seekbar.xml
@@ -6,6 +6,7 @@
         <shape>
             <gradient
                 android:endColor="@color/colorEnd"
+                android:centerColor="@color/colorCenter"
                 android:startColor="@color/colorStart" />
         </shape>
     </item>
