--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,23 +15,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:layout_marginBottom="@dimen/fab_margin">
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:weightSum="1">
 
         <Button
             android:id="@+id/start_updates_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
             android:layout_marginTop="@dimen/narrow_space"
+            android:layout_weight="0.5"
             android:text="@string/request_activity_updates" />
 
         <Button
             android:id="@+id/stop_updates_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
             android:layout_marginTop="@dimen/narrow_space"
+            android:layout_weight="0.5"
             android:text="@string/remove_activity_updates" />
     </LinearLayout>
 
@@ -44,15 +44,38 @@
         android:text="@string/activity_index_title"
         android:textSize="@dimen/headline_text_size" />
 
-
-    <SeekBar
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
-        android:max="30"
-        android:progressDrawable="@drawable/seekbar"
-        android:thumb="@drawable/seekbar_thumb"
-        android:layout_marginBottom="@dimen/fab_margin"/>
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:padding="@dimen/progress_bar_top_margin"
+            android:text="@string/activity_bad"
+            android:textAlignment="center"/>
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:max="30"
+            android:layout_weight="6"
+            android:progressDrawable="@drawable/seekbar"
+            android:thumb="@drawable/seekbar_thumb" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/progress_bar_top_margin"
+            android:layout_weight="2"
+            android:text="@string/activity_good"
+            android:textAlignment="center"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/detected_activities_title"
