--- a/app/src/main/res/drawable/seekbar.xml
+++ b/app/src/main/res/drawable/seekbar.xml
@@ -17,6 +17,7 @@
             <shape>
                 <gradient
                     android:endColor="@color/colorEnd"
+                    android:centerColor="@color/colorCenter"
                     android:startColor="@color/colorStart" />
             </shape>
         </clip>
@@ -29,6 +30,7 @@
             <shape>
                 <gradient
                     android:endColor="@color/colorEnd"
+                    android:centerColor="@color/colorCenter"
                     android:startColor="@color/colorStart" />
             </shape>
         </clip>
